# turing_machine

./: .gitignore  README.md
core/: CMakeLists.txt  cell.h  command.h  console_printer.cpp  console_printer.h  head.h  main.cpp  parser.h  program.h  state.h  tape.cpp  tape.h  test  to_int
qturing/widget/: main.cpp  turingmachine.cpp  turingmachine.h  turingmachine.ui  widget.pro
